[package]
name = "twitter-card"
version = "1.0.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/chooxide/twitter-card"
documentation = "https://docs.rs/twitter-card"
description = "Generate HTML for Twitter Card integration."
keywords = ["twitter", "card", "opengraph", "social", "meta"]
categories = ["template-engine", "value-formatting", "web-programming", "web-programming::http-server"]
authors = ["Yoshua Wuyts <yoshuawuyts@gmail.com>"]
readme = "README.md"

[dependencies]
failure = "0.1.3"

[dev-dependencies]
